# http1.0

./: CMakeLists.txt
core/: CMakeLists.txt
core-lib/: CMakeLists.txt
core-lib/include/core-lib/: objects.h  receiver.h  util.h
core-lib/src/: receiver.c  util.c
core/src/: main.c
http/: CMakeLists.txt
http/include/http/: handlers.h  request.h  response.h
http/src/: handlers.c  request.c  response.c
poll-server/: CMakeLists.txt
poll-server/include/: active_users.h  broadcast.h  database.h  handle.h  objects.h  poll_server.h  read.h  request.h  respond.h  response.h  util.h
poll-server/src/: active_users.c  api_functions.c  broadcast.c  database.c  handle.c  poll_server.c  read.c  request.c  respond.c  response.c  util.c
